kubernetes/applications/keycloak/keycloak.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: keycloak
  name: keycloak
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.0.5
        command:
        - /opt/keycloak/bin/kc.sh
        args:
        - start
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        - name: mgmt
          containerPort: 9000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health/live
            port: mgmt
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /health/ready
            port: mgmt
            scheme: HTTP
        startupProbe:
          httpGet:
            path: /health/started
            port: mgmt
            scheme: HTTP
          failureThreshold: 30
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: keycloak
  name: keycloak
  namespace: keycloak
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
  - name: mgmt
    port: 9000
    targetPort: mgmt
    protocol: TCP
  selector:
    app.kubernetes.io/name: keycloak
---
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
