kubernetes/applications/keycloak/keycloak-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    # Public DNS target is set once: external-dns --default-targets in kubernetes/applications/external-dns/external-dns.yaml
  labels:
    app.kubernetes.io/name: keycloak
  name: keycloak
  namespace: keycloak
spec:
  ingressClassName: nginx
  rules:
  - host: auth.lilalala.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: keycloak
            port:
              name: http
  tls:
  - hosts:
    - auth.lilalala.com
    secretName: keycloak-tls
